# filmes-api

./: README.md  main.py  pyproject.toml  requirements.txt
collection/: Movies API.postman_collection.json  User.postman_collection.json  [DEV] Filmes  [PRD] Movies API.postman_environment.json
sql/: sql.sql
